force-app/main/default/objects/openq__OPENQ_Address__c/openq__OPENQ_Address__c.object-meta.xml
<CustomObject>
    <label>Address</label>
    <nameField>
        <displayFormat>AD-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>