force-app/main/default/objects/openq__OPENQ_Address__c/fields/openq__City__c.field-meta.xml
<CustomField>
    <fullName>openq__City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>