force-app/main/default/objects/openq__OPENQ_Address__c/fields/openq__Display_in_Headers__c.field-meta.xml
<CustomField>
    <fullName>openq__Display_in_Headers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display in Headers</label>
    <type>Checkbox</type>
</CustomField>