force-app/main/default/objects/openq__OPENQ_Address__c/fields/openq__Preferred__c.field-meta.xml
<CustomField>
    <fullName>openq__Preferred__c</fullName>
    <label>Preferred</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>