force-app/main/default/objects/openq__OPENQ_Address__c/fields/openq__URL__c.field-meta.xml
<CustomField>
    <fullName>openq__URL__c</fullName>
    <label>URL</label>
    <type>Url</type>
</CustomField>