force-app/main/default/objects/openq__OPENQ_Address__c/listViews/openq__All.listView-meta.xml
<ListView>
    <fullName>openq__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>openq__Contact_Name__c</columns>
    <columns>openq__OPENQ_Record_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>